# ChangeLog for games-strategy/darwinia-demo
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-strategy/darwinia-demo/ChangeLog,v 1.1 2005/09/09 14:40:08 wolf31o2 Exp $

*darwinia-demo-1.2.1 (09 Sep 2005)

  09 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> +metadata.xml,
  +darwinia-demo-1.2.1.ebuild:
  Initial import.  Ebuild by <dkaloper@mjesec.ffzg.hr>.  Closing bug #85834.
