@@ -1,6 +1,10 @@
 # ChangeLog for games-strategy/darwinia-demo
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-strategy/darwinia-demo/ChangeLog,v 1.1 2005/09/09 14:40:08 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-strategy/darwinia-demo/ChangeLog,v 1.2 2005/09/11 14:05:15 wolf31o2 Exp $
+
+  11 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  darwinia-demo-1.2.1.ebuild:
+  Marking ~amd64 and changing dolib -> doexe so it works on amd64.
 
 *darwinia-demo-1.2.1 (09 Sep 2005)
 
